--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "child-process-promise": "^2.2.1",
+    "connect-multiparty": "^2.1.1",
     "cookie-parser": "^1.4.3",
     "cos-nodejs-sdk-v5": "^2.4.3",
     "ejs": "^2.5.6",
@@ -29,6 +31,7 @@
     "multer": "^1.3.1",
     "multiparty": "^4.1.4",
     "mysql": "^2.13.0",
+    "redis": "^2.8.0",
     "request": "^2.87.0",
     "request-promise": "^4.2.2",
     "supervisor": "^0.12.0"
